fonts and colors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "@/components": ["./src/components/*"],
       "@/public/*": ["./public/*"]
     },
     "incremental": true
