--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.7",
+    "tailwindcss-textshadow": "^2.1.3",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0"
   }
