--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^14.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
