--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.16",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.417.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
