--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "next": "^14.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-gallery": "^1.0.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-image-lightbox": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
