--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
-    "react-image-lightbox": "^5.1.4"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
