About Us Framer Motion Animation

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.13.1",
     "lucide-react": "^0.417.0",
     "motion": "^11.11.17",
     "next": "^14.2.10",
